Fix some ugly line wrapping

--- a/src/styles/Posts.css
+++ b/src/styles/Posts.css
@@ -198,6 +198,7 @@ a.thread-row:hover {
 .thread-row .thread-meta span {
 	margin: 0 2px;
 	display: block;
+	white-space: nowrap;
 }
 
 @media only screen and (min-width: 768px) {
